--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install lftp
+        run: |
+          echo "Installing lftp..."
+          sudo apt-get update
+          sudo apt-get install -y lftp
+
       - name: Clear remote server directory
         run: |
           echo "Connecting to FTP and deleting all remote files..."
