--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,12 @@
+name: Deploy Node.js Project to cPanel via FTP
+
 on:
   push:
     branches:
       - testing
   workflow_dispatch:
-    inputs:
-      confirm:
-        description: "Do you want to deploy to production?"
-        required: true
-        default: "no"
-        type: choice
-        options:
-          - "yes"
-          - "no"
+    branches:
+      - main
 
 jobs:
   build:
@@ -47,6 +42,8 @@ jobs:
     if: github.ref == 'refs/heads/testing'
     runs-on: ubuntu-latest
     steps:
+
+
       # Step 1: Checkout the latest code
       - name: Checkout code
         uses: actions/checkout@v2
@@ -74,7 +71,7 @@ jobs:
         run: ls -la
 
       # Step 4: Sync files to cPanel via FTP
-      - name: Sync files to testing
+      - name: Sync files to development
         uses: SamKirkland/FTP-Deploy-Action@v4.2.0
         with:
           server: ftp.trimworldwide.com
@@ -87,14 +84,26 @@ jobs:
           echo "Triggering npm install via PHP script..."
           curl -X GET "https://rauf.trimworldwide.com/trigger.php"
 
+
   deploy-main:
     needs: build
-    if: github.ref == 'refs/heads/main' && github.event.inputs.confirm == 'yes'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+
     steps:
       # Step 1: Checkout the latest code
       - name: Checkout code
         uses: actions/checkout@v2
+
+      name: Check deployment flag
+        id: check-flag
+        run: |
+          DEPLOY_FLAG="no" # Set the flag here. Change to "yes" to enable deployment.
+          echo "Deployment flag is set to: $DEPLOY_FLAG"
+          if [ "$DEPLOY_FLAG" != "yes" ]; then
+            echo "Deployment flag is not set to 'yes'. Skipping deployment."
+            exit 0
+          fi
 
       # Step 2: Create necessary files
       - name: Create .htaccess file
@@ -119,7 +128,7 @@ jobs:
         run: ls -la
 
       # Step 4: Sync files to cPanel via FTP
-      - name: Sync files to production
+      - name: Sync files to development
         uses: SamKirkland/FTP-Deploy-Action@v4.2.0
         with:
           server: ftp.trimworldwide.com
